fix featured panelist orgs styling issues on IE

--- a/docroot/themes/custom/crosscut_festival/css/style.css
+++ b/docroot/themes/custom/crosscut_festival/css/style.css
@@ -11538,28 +11538,34 @@ footer .footer-content-main {
   padding-right: 0;
 }
 
+.featured-org-carousel .owl-carousel .owl-stage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .featured-org-carousel .feature-text {
   font-size: .9em;
   color: #172C3B;
   font-weight: bold;
   text-transform: uppercase;
   display: inline-block;
-  margin: 14px auto 4px;
+  margin: 14px auto 10px;
 }
 
 .featured-org-carousel .featured-panelist-organization {
-  height: 80px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 260px;
 }
 
-.featured-org-carousel .org {
-  max-width: 300px;
-}
-
 .featured-org-carousel .org img {
-  width: 300px;
-  height: 60px;
+  max-height: 60px;
+  height: auto;
+  width: auto;
   -o-object-fit: contain;
      object-fit: contain;
 }
